@@ -1,3 +1,3 @@
-Copyright 2001-2005
+Copyright 2001-2006
 G. Pape
 http://smarden.org/runit/
