@@ -41,3 +41,4 @@
 1.4.0
 1.4.1
 1.5.0
+1.5.1
